--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -18,8 +18,8 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ```jsx live
 <VideoPlayer title="GitHub media player">
-  <VideoPlayer.Source src="/example.mp4" />
-  <VideoPlayer.Track src="/example.vtt" />
+  <VideoPlayer.Source src="/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -27,8 +27,8 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ```jsx live
 <VideoPlayer poster="/example-poster.png" title="GitHub media player">
-  <VideoPlayer.Source src="/example.mp4" />
-  <VideoPlayer.Track src="/example.vtt" />
+  <VideoPlayer.Source src="/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -36,8 +36,8 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ```jsx live
 <VideoPlayer branding={false} title="GitHub media player">
-  <VideoPlayer.Source src="/example.mp4" />
-  <VideoPlayer.Track src="/example.vtt" />
+  <VideoPlayer.Source src="/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
