Updated Story Examples

--- a/apps/docs/content/components/Bento.mdx
+++ b/apps/docs/content/components/Bento.mdx
@@ -83,10 +83,8 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       small: 12,
       medium: 6,
       large: 4,
-      xlarge: 3,
-      xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3}}
   />
   <Bento.Item
     columnSpan={{
@@ -94,10 +92,8 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       small: 12,
       medium: 6,
       large: 4,
-      xlarge: 3,
-      xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3}}
   />
   <Bento.Item
     columnSpan={{
@@ -105,10 +101,8 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       small: 12,
       medium: 6,
       large: 4,
-      xlarge: 3,
-      xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3}}
   />
   <Bento.Item
     columnSpan={{
@@ -116,10 +110,8 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       small: 12,
       medium: 6,
       large: 4,
-      xlarge: 3,
-      xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3}}
   />
   <Bento.Item
     columnSpan={{
@@ -127,10 +119,8 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       small: 12,
       medium: 6,
       large: 4,
-      xlarge: 3,
-      xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3}}
   />
   <Bento.Item
     columnSpan={{
@@ -138,10 +128,8 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       small: 12,
       medium: 6,
       large: 4,
-      xlarge: 3,
-      xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3}}
   />
 </Bento>
 ```
