--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -14,7 +14,9 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ## Examples
 
-{/* Note: These assets will not load in local development. The way gatsby works prefixes the assets URLs which cannot currently be done in these files. */}
+<!---
+ Note: These assets will not load in local development. The way gatsby works prefixes the assets URLs which cannot currently be done in these files.
+-->
 
 ### Default
 
