--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -15,7 +15,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ## Examples
 
 <!---
- Note: These assets will not load in local development. The way gatsby works prefixes the assets URLs which cannot currently be done in these files.
+TODO: Fix asset loading in environments that don't use `pathPrefix`. This is a temporary solution to load assets in production deployments, but currently doesn't work in dev mode or preview URLs
 -->
 
 ### Default
