--- a/apps/docs/content/getting-started/theming.mdx
+++ b/apps/docs/content/getting-started/theming.mdx
@@ -100,7 +100,7 @@ For tighter control over appearance - such as forcing areas of a layout to appea
   <ThemeProvider
     colorMode="dark"
     style={{
-      backgroundColor: 'var(--brand-color-canvas-default',
+      backgroundColor: 'var(--brand-color-canvas-default)',
     }}
   >
     <River align="center">
@@ -124,7 +124,7 @@ For tighter control over appearance - such as forcing areas of a layout to appea
   <ThemeProvider
     colorMode="light"
     style={{
-      backgroundColor: 'var(--brand-color-canvas-default',
+      backgroundColor: 'var(--brand-color-canvas-default)',
     }}
   >
     <Container>
