Apply suggestions from code review
Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>
Co-authored-by: Josep Martins <josepmartins@github.com>

--- a/apps/docs/content/components/Bento.mdx
+++ b/apps/docs/content/components/Bento.mdx
@@ -25,7 +25,7 @@ import {Bento} from '@primer/react-brand'
 </Bento>
 ```
 
-### Example Layout 1
+### Example layout 1
 
 ```jsx live
 <Bento>
@@ -36,7 +36,7 @@ import {Bento} from '@primer/react-brand'
 </Bento>
 ```
 
-### Example Layout 2
+### Example layout 2
 
 ```jsx live
 <Bento>
@@ -47,7 +47,7 @@ import {Bento} from '@primer/react-brand'
 </Bento>
 ```
 
-### Example Layout 3
+### Example layout 3
 
 ```jsx live
 <Bento>
@@ -58,7 +58,7 @@ import {Bento} from '@primer/react-brand'
 </Bento>
 ```
 
-### Dark Mode Items
+### Dark mode items
 
 ```jsx live
 <Bento>
@@ -153,7 +153,7 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
     </Text>
     <Link href="#">Call to action</Link>
   </Bento.Content>
-  <Bento.Visual position="50% 100%">
+  <Bento.Visual>
     <img
       className="test"
       alt="placeholder, blank area with an gray background color"
