Updated Bento Default Story

--- a/apps/docs/content/components/Bento.mdx
+++ b/apps/docs/content/components/Bento.mdx
@@ -16,12 +16,7 @@ import {Bento} from '@primer/react-brand'
 
 ```jsx live
 <Bento>
-  <Bento.Item columnSpan={3} rowSpan={4} />
-  <Bento.Item columnSpan={3} rowSpan={2} />
-  <Bento.Item columnSpan={6} rowSpan={4} />
-  <Bento.Item columnSpan={3} rowSpan={2} rowStart={5} />
-  <Bento.Item columnSpan={3} rowSpan={4} />
-  <Bento.Item columnSpan={6} rowSpan={2} />
+  <Bento.Item />
 </Bento>
 ```
 
