--- a/apps/docs/content/components/Bento.mdx
+++ b/apps/docs/content/components/Bento.mdx
@@ -191,7 +191,7 @@ The Bento.Item component API supports all standard HTML attribute props for the 
 | `className`       | `string`                                                                                                                   |            | `false`  | Sets a custom class on the root element                                                                                                                   |
 | `children`        | [`Text`](https://primer.style/brand/components/Text),`Bento.Heading`, [`Link`](https://primer.style/brand/components/Link) |            | `false`  | The children to be rendered within the `Bento.Content`                                                                                                    |
 | `leadingVisual`   | `ReactElement`, `Icon`                                                                                                     |            | `false`  | Sets the icon before the heading text                                                                                                                     |
-| `padding`         | `"condensed"`, `"normal"`, `"spacious"`                                                                                    | `"normal"` | `false`  | Sets a custom class on the root element                                                                                                                   |
+| `padding`         | `"condensed"`, `"normal"`, `"spacious"`, `ResponsivePadding`                                                               | `"normal"` | `false`  | Sets a custom class on the root element                                                                                                                   |
 | `horizontalAlign` | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                          | `"start"`  | `false`  | The horizontal alignment of children within the `Bento.Content`                                                                                           |
 | `verticalAlign`   | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                          | `"start"`  | `false`  | The vertical alignment of children within the `Bento.Content`. This cannot be used with the `fixedBottomLink` property.                                   |
 | `fixedBottomLink` | `boolean`                                                                                                                  |  `false`   | `false`  | Sets the link within the `Bento.Content` to have a margin-top of `auto` pushing it to the bottom. With this set you can not vertically align the content. |
@@ -211,11 +211,11 @@ Forwards all props from the [Heading component](/components/Heading), including 
 
 ### Bento.Visual
 
-| Name        | Type                                    |   Default   | Required | Description                                                                                              |
-| :---------- | :-------------------------------------- | :---------: | :------- | -------------------------------------------------------------------------------------------------------- |
-| `className` | `string`                                |             | `false`  | Sets a custom class on the root element                                                                  |
-| `fillMedia` | `boolean`                               |   `true`    | `false`  | Determines how the visual reacts within its container. Either filling the container or contained within. |
-| `position`  | `string`                                | `"50% 50%"` | `false`  | The positioning of the visual.                                                                           |
-| `padding`   | `"condensed"`, `"normal"`, `"spacious"` |             | `false`  | Sets a custom class on the root element                                                                  |
+| Name        | Type                                                         |   Default   | Required | Description                                                                                              |
+| :---------- | :----------------------------------------------------------- | :---------: | :------- | -------------------------------------------------------------------------------------------------------- |
+| `className` | `string`                                                     |             | `false`  | Sets a custom class on the root element                                                                  |
+| `fillMedia` | `boolean`                                                    |   `true`    | `false`  | Determines how the visual reacts within its container. Either filling the container or contained within. |
+| `position`  | `string`                                                     | `"50% 50%"` | `false`  | The positioning of the visual.                                                                           |
+| `padding`   | `"condensed"`, `"normal"`, `"spacious"`, `ResponsivePadding` |             | `false`  | Sets a custom class on the root element                                                                  |
 
 The Bento.Visual component API supports all standard HTML attribute props for the interface HTMLDivElement, while providing some additional behavior as described above.
