fix changeset typo

--- a/apps/docs/content/components/FAQ/react.mdx
+++ b/apps/docs/content/components/FAQ/react.mdx
@@ -124,7 +124,7 @@ import {FAQ, FAQGroup} from '@primer/react-brand'
 
 ### Grouped FAQs
 
-Use `FAQGroup` to display FAQ content in a compact and intuitive format.
+Use `FAQGroup` to display multiple `FAQ` components together.
 
 ```jsx live
 <FAQGroup>
