revert card changes and add new changesets

--- a/apps/docs/content/components/SectionIntro/react.mdx
+++ b/apps/docs/content/components/SectionIntro/react.mdx
@@ -73,6 +73,7 @@ The content alignment can be changed using the `align` prop on the root `Section
 | `children`  | `ReactNode`, `ReactNode[]` | `undefined` | `true`   | Content to include within the section intro component         |
 | `align`     | `start`, `center`          | `start`     | `true`   | The layout applied to the content wihin the section component |
 | `className` | `string`                   |             | `false`  | SectionIntro custom class                                     |
+| `fullWidth` | `boolean`                  |             | `false`  | Fills available space                                         |
 
 ### Hero.Label
 
