--- a/apps/docs/content/components/Timeline.mdx
+++ b/apps/docs/content/components/Timeline.mdx
@@ -69,6 +69,7 @@ Use an `<em>` element within the timeline items to apply a duotone style and emp
 | :---------- | :--------------------------------- | :-----: | :------------------------------------------- |
 | `className` | `string`                           |         | Sets a custom class on the root element      |
 | `children`  | `Timeline.Item`, `Timeline.Item[]` |         | Content to be displayed within the component |
+| `fullWidth` | `boolean`                          | `false` | Fills available space                        |
 
 ### Timeline.Item
 
