Remove align prop from docs

--- a/apps/docs/content/components/Testimonial/index.mdx
+++ b/apps/docs/content/components/Testimonial/index.mdx
@@ -46,7 +46,8 @@ Avatars and logos are optional and can be used to provide more credibility about
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/bcda5e31-1ccc-44a5-9d65-2f6aad326f4b" />
     <Caption>
-      Don't use illustrations or generic images. Use real life images to provide trust.
+      Don't use illustrations or generic images. Use real life images to provide
+      trust.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -119,9 +120,9 @@ The testimonial component uses the small size by default. Use the large size to 
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/63143585-1c28-4380-853d-a6e5dff6f8c1" />
     <Caption>
-      Don't use the large size in small sized areas or components like rivers, so
-      they don't conflict with the main content. Even if the quote is short, use
-      the small size instead.
+      Don't use the large size in small sized areas or components like rivers,
+      so they don't conflict with the main content. Even if the quote is short,
+      use the small size instead.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -139,10 +140,6 @@ The testimonial component uses the small size by default. Use the large size to 
     </Caption>
   </Dont>
 </DoDontContainer>
-
-### Alignment
-
-Testimonials can be aligned to the start or center of the container. Aligning to the start is the default and recommended behavior. Use center alignment only when the overall page design calls for this alignment and the quotes aren't too long to avoid the content from looking too spread out.
 
 ## Related components
 
