--- a/apps/docs/content/components/Testimonial/react.mdx
+++ b/apps/docs/content/components/Testimonial/react.mdx
@@ -59,22 +59,6 @@ A logo (or similar) visual can be provided as an alternative to avatars.
 </Testimonial>
 ```
 
-### Alignment
-
-Use `align` to alternate the text direction. Available options are `start` (default) and `center`.
-
-```jsx live
-<Testimonial align="center">
-  <Testimonial.Quote>
-    GitHub helps us ensure that we have our security controls baked into our
-    pipelines all the way from the first line of code we&apos;re writing.
-  </Testimonial.Quote>
-  <Testimonial.Name position="Staff Software Engineer">
-    David Ross
-  </Testimonial.Name>
-</Testimonial>
-```
-
 ### Size
 
 Use `size` to alternate the text size. Available options are `small` (default) and `large`.
@@ -99,14 +83,14 @@ Use `Stack` to help position multiple, adjacent Testimonials alongside one anoth
 
 ```jsx live
 <Stack direction="horizontal" gap="spacious" padding="spacious">
-  <Testimonial align="center">
+  <Testimonial>
     <Testimonial.Quote>
       GitHub helps us ensure that we have our security controls baked into our
       pipelines all the way from the first line of code we&apos;re writing.
     </Testimonial.Quote>
     <Testimonial.Name>David Ross</Testimonial.Name>
   </Testimonial>
-  <Testimonial align="center">
+  <Testimonial>
     <Testimonial.Quote>
       GitHub helps us ensure that we have our security controls baked into our
       pipelines all the way from the first line of code we&apos;re writing.
@@ -143,7 +127,6 @@ Pass additional content about the testimonial provider using `position`.
 | `children`       | <PropTableValues addLineBreaks values={['Testimonial.Quote','Testimonial.Name','Testimonial.Logo','Testimonial.Avatar','React.ReactNode' ]} addLineBreaks /> |             | Valid child nodes                             |
 | `className`      | `string`                                                                                                                                                     |             | Sets a custom class                           |
 | `id`             | `string`                                                                                                                                                     |             | Sets a custom id                              |
-| `align`          | <PropTableValues addLineBreaks values={['start','center']}/>                                                                                                 |  `'start'`  | Set alignment of inner text                   |
 | `ref`            | `React.RefObject`                                                                                                                                            |             | Forward a Ref to the underlying DOM node      |
 | `size`           | <PropTableValues addLineBreaks values={['small','large']}/>                                                                                                  |  `'small'`  | Set size of quote's text                      |
 | `quoteMarkColor` | <PropTableValues addLineBreaks values={TestimonialQuoteMarkColors}/>                                                                                         | `'default'` | Color or gradient fill of the the quote mark. |
